@@ -33,8 +33,8 @@ requires:
   PYX::Parser: 0.03
   perl: 5.6.2
 resources:
-  bugtracker: https://github.com/tupinek/PYX-XMLNorm/issues
-  homepage: https://github.com/tupinek/PYX-XMLNorm
+  bugtracker: https://github.com/michal-josef-spacek/PYX-XMLNorm/issues
+  homepage: https://github.com/michal-josef-spacek/PYX-XMLNorm
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/PYX-XMLNorm
+  repository: git://github.com/michal-josef-spacek/PYX-XMLNorm
 version: '0.05'
