@@ -22,9 +22,9 @@ requires 'Error::Pure' => 0.15;
 requires 'PYX' => 0.01;
 requires 'PYX::Parser' => 0.03;
 requires 'perl' => '5.6.2';
-resources 'bugtracker' => 'https://github.com/tupinek/PYX-XMLNorm/issues';
-resources 'homepage' => 'https://github.com/tupinek/PYX-XMLNorm';
-resources 'repository' => 'git://github.com/tupinek/PYX-XMLNorm';
+resources 'bugtracker' => 'https://github.com/michal-josef-spacek/PYX-XMLNorm/issues';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/PYX-XMLNorm';
+resources 'repository' => 'git://github.com/michal-josef-spacek/PYX-XMLNorm';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.07;
 test_requires 'File::Slurp' => 0;
