@@ -101,7 +101,7 @@ SEE ALSO
         Install the PYX modules.
 
 REPOSITORY
-    <https://github.com/tupinek/PYX-XMLNorm>
+    <https://github.com/michal-josef-spacek/PYX-XMLNorm>
 
 AUTHOR
     Michal Josef Špaček skim@cpan.org.
