@@ -4,6 +4,7 @@
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Move bugtracker to github.
  - Update Module::Install to 1.21 version.
+ - Update author github username.
  - Update author name.
  - Update copyright years.
 
